--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.4.1",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
